ui width restriction and word wrap more fixes

--- a/yikyak/client/src/App.css
+++ b/yikyak/client/src/App.css
@@ -109,7 +109,7 @@ li {
 }
 
 .postMain, .replyMain {
-  width: 100%;
+  width: 90%;
 }
 
 .postText, .replyText {
